Benchmarking 3 scenerios for loading internal and external instances